docs: init-deep — hierarchical AGENTS.md knowledge base
Root AGENTS.md merged with GitNexus section.
Module-level AGENTS.md for summer-core, summer-web, summer-runtime.